drop old deprecated code